metadata/objects/MyList__c.object
<CustomObject>
    <fields>
        <fullName>Due__c</fullName>
        <label>Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MyList</label>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>MyList Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MyLists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>